--- a/less/addons.less
+++ b/less/addons.less
@@ -40,3 +40,10 @@ Responsive video
 	width: 100%;
 	height: 100%;
 }
+
+/*
+===========================================================================================================================
+Magnific popup
+===========================================================================================================================
+*/
+@import url('magnific-popup.less');
