--- a/less/theme.less
+++ b/less/theme.less
@@ -1,4 +1,6 @@
-
+body{
+	background: #f1f1f1;
+}
 ul,
 code{
 	margin-bottom: 1em;
@@ -200,4 +202,73 @@ Navbar
 }
 .navbar-default .navbar-link:hover {
 	color: #333333;
+}
+/*
+===========================================================================================================================
+Magnific pop
+===========================================================================================================================
+*/
+.mfp-bg{
+	background: tomato;
+}
+/*
+===========================================================================================================================
+Image gallery
+===========================================================================================================================
+*/
+.thumbnail{
+	border: 0;
+	padding: 10px;
+	border-radius: 0;
+	margin-bottom: 0px;
+	background: transparent;
+	img{
+		margin: 0;
+	}
+}
+.mfp-arrow:before{
+	opacity: 1;
+	z-index: 9999;
+}
+.mfp-arrow-left:before{
+	margin-left: 20px;
+	border: 0;
+	.sprite(2,0);
+	width: 50px;
+	height: 50px;
+}
+.mfp-arrow-left:after{
+	display: none;
+}
+.mfp-arrow-right:before{
+	margin-left: 20px;
+	border: 0;
+	.sprite(1,0);
+	width: 50px;
+	height: 50px;
+}
+.mfp-arrow-right:after{
+	display: none;
+}
+.mfp-image-holder .mfp-close{
+	right: -14px;
+	padding: 0px;
+	width: 50px;
+	top: -5px;
+	.sprite(3,0);
+}
+.mfp-title{
+	text-align: left;
+	line-height: 18px;
+	color: #000;
+	word-wrap: break-word;
+	padding-right: 36px;
+}
+.mfp-counter{
+	position: absolute;
+	top: 0;
+	right: 0;
+	color: #fff;
+	font-size: 12px;
+	line-height: 18px;
 }
