--- a/less/variables.less
+++ b/less/variables.less
@@ -11,11 +11,11 @@ Animations & transitions
 ===========================================================================================================================
 */
 .transition{
-	-webkit-transition: all .1s ease-in-out;
-	-moz-transition: all .1s ease-in-out;
-	-ms-transition: all .1s ease-in-out;
-	-o-transition: all .1s ease-in-out;
-	transition: all .1s ease-in-out;
+	-webkit-transition: all .2s ease-in;
+	-moz-transition: all .2s ease-in;
+	-ms-transition: all .2s ease-in;
+	-o-transition: all .2s ease-in;
+	transition: all .2s ease-in;
 }
 /*
 ===========================================================================================================================
