--- a/less/addons.less
+++ b/less/addons.less
@@ -5,16 +5,17 @@
 Sticky footer
 ===========================================================================================================================
 */
+// place <footer> after .wrapper and uncomment #wrapper{height: auto !important;} & footer{position: relative;}
 #wrapper{
 	min-height: 100%;
-	height: auto !important;
+	// height: auto !important;
 	height: 100%;
 	width:100%;
 	*width:100%;
 	margin: 0 auto -100px; // Footer height's
 }
 footer{
-	position: relative;
+	// position: relative;
 	margin: 0 auto;
 	height: 100px;
 	clear:both;
