--- a/less/variables.less
+++ b/less/variables.less
@@ -134,3 +134,16 @@ code,
 	-moz-hyphens: auto;
 	hyphens: auto;
 }
+/*
+===========================================================================================================================
+Boostrap Media Queries
+===========================================================================================================================
+*/
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+@screen-sm-min : 768px;
+@screen-md-min : 992px;
+@screen-lg-min : 1200px;
+@screen-xs-max : 767px;
+@screen-sm-max : 991px;
+@screen-md-max : 1199px;
