--- a/less/theme.less
+++ b/less/theme.less
@@ -34,6 +34,9 @@ a{
     background-size: cover;
     background-position: 50% 50%;
     color: #fff;
+    h2{
+    	.serif;
+    }
 }
 footer{
 	background: #fff;
@@ -91,7 +94,7 @@ textarea{
 	margin: 10px 0;
 }
 footer{
-	padding: 20px;
+	padding: 37px;
 }
 .btn{
 	background: tomato;
@@ -120,7 +123,7 @@ textarea,
 footer,
 code,
 li{
-	font-family: "Courier New", Courier, monospace;
+	.serif;
 }
 .demo{
 	margin-bottom: 30px;
