--- a/less/theme.less
+++ b/less/theme.less
@@ -69,7 +69,7 @@ hr{
 @media only screen and (max-width : 767px) {
 	header,
 	section{
-		padding: 40px 20px;
+		padding: 70px 20px 40px 20px;
 	}
 }
 input[type="text"],
